<resources>
    <!--menu -->
    <string name="app_name">Kenndroid</string>
    <string name="action_config">Configurações</string>
    <string name="action_canil">Canil</string>
    <string name="action_animal">Animais</string>
    <string name="action_acasalamentos">Acasalamentos</string>
    <string name="action_vendas">Vendas</string>
    <string name="action_clientes">Clientes</string>
    <string name="action_clinicas">Clinicas</string>
    <string name="action_veterinarios">Veterinários</string>
    <string name="action_vacinas">Vacinas</string>
    <string name="action_eventos">Eventos</string>

    <!--tela de cadastro de Canil-->
    <string name="titulo_cad">Cadastro de Canil</string>

    <!--tela de cadastro de Vacinas-->
    <string name="titulo_cadVac">Cadastro de Vacinas</string>

    <!--tela de cadastro de Vendas-->
    <string name="titulo_cadVenda">Cadastro de Vendas</string>

    <!--tela de cadastro de Veterinários-->
    <string name="titulo_cadVet">Cadastro de Venterinários</string>

    <!--tela de cadastro de Clientes-->
    <string name="titulo_cadClientes">Cadastro de Clientes</string>

    <!--tela de cadastro de Animais-->
    <string name="titulo_cadAnimal">Cadastro de Animal</string>

    <!--tela de cadastro de Vacinações realizadas-->
    <string name="titulo_cadVacinacao">Cadastro de Vacinação</string>

    <!--tela de cadastro de Clinicas-->
    <string name="titulo_cadClinica">Cadastro de Clínicas</string>

    <!--tela de cadastro de Eventos-->
    <string name="titulo_cadEvento">Cadastro de Evento</string>

    <!--campos de cadastros-->
    <string name="edt_nome">Nome</string>
    <string name="edt_cidade">Cidadde</string>
    <string name="edt_estado">Estado</string>
    <string name="edt_end">Endereço</string>
    <string name="edt_compl">Complemento</string>
    <string name="edt_pt_ref">Ponto de referência</string>
    <string name="edt_cep">CEP</string>
    <string name="edt_dataFund">Data de fundação</string>
    <string name="edt_cnpj">CNPJ</string>
    <string name="edt_razao_social">Razão Social</string>
    <string name="edt_fone1">Telefone</string>
    <string name="edt_fone2">Telefone</string>
    <string name="edt_email">E-mail</string>
    <string name="edt_descricao">Breve drescrição</string>
    <string name="edt_nome_animal">Nome do animal</string>
    <string name="edt_nome_cliente">Nome do Cliente</string>
    <string name="edt_cpf">CPF</string>


    <!--campos de cadastros extras de venda-->
    <string name="edt_dt">Data da venda</string>
    <string name="edt_valor">R$ </string>
    <string name="edt_valor_recebido">Valor recebido</string>
    <string name="edt_entrega_pedigree">Data de entrega do pedigree</string>
    <string name="edt_dt_ult_pgto">Data do último pagamento</string>
    <string name="edt_nota_fiscal">Nota Fiscal</string>
    <string name="edt_forma_pgto">forma de pagamento</string>
    <string name="edt_obs">Observações</string>

    <!--campos de cadastros extras de Cadastro de vetenários-->
    <string name="edt_especialidade">Especialidade veterinária</string>

    <!--campos de cadastros extras de Cadastro de Vacinações realizadas-->
    <string name="edt_nome_clinica">Clínica: </string>

    <!--campos de cadastros extras de Cadastro de Clientes-->
    <string name="edt_nome_campo_nasc">Data de nasc:</string>
    <string name="edt_dia">00</string>
    <string name="edt_mes">00</string>
    <string name="edt_ano">00</string>
    <string name="title_activity_cad_animal">CadAnimal</string>

    <!--campos de cadastros extras de Cadastro de Animais-->
    <string name="edt_nome_campo_data_venda">Data da venda:</string>
    <string name="edt_nome_pai">Nome do pai</string>
    <string name="edt_nome_mae">Nome da mãe</string>
    <string name="edt_nome_canil">Nome do Canil</string>
    <string name="edt_nome_comprador">Nome do Comprador</string>
    <string name="edt_foto">Foto: </string>

    <!--campos de cadastros extras de Cadastro de Vacinas-->
    <string name="edt_nome_vac">Vacina: </string>

    <!--campos de cadastros extras de Cadastro de Vacinações realizadas-->
    <string name="edt_m_vac">Marca da Vacina</string>
    <string name="edt_valVac">Validade: </string>
    <string name="edt_lote">Lote da vacina</string>
    <string name="edt_reac_adv">Reações adversas</string>
    <string name="edt_nomeAnimal">Animal: </string>
    <string name="edt_nomeVet">Médico: </string>
    <string name="edt_data">Data Vacinação: </string>
    <string name="edt_val">Validade Vacina: </string>
    <string name="edt_valor_Vac">Valor: </string>

    <!--campos de cadastros extras de Cadastro de Eventos-->
    <string name="edt_nomeEvento">Nome do evento</string>
    <string name="edt_tpo_evento">Competição de:</string>
    <string name="edt_dataEvento">Data do Evento: </string>
    <string name="edt_orgEvento">Organização do Evento</string>
    <string name="edt_eventoTpo1">Exposição</string>
    <string name="edt_eventoTpo2">Agility</string>

</resources>
