<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Titulo da tela-->
    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_eventos" />

        <TextView
            android:id="@+id/titulo_cad"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:text="@string/titulo_cad" />

    </LinearLayout>


    <EditText
        android:id="@+id/edt_nomeEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edt_nomeEvento" />

    <EditText
        android:id="@+id/edt_orgEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edt_orgEvento" />

    <!-- Data do Evento-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/dataEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/edt_dataEvento"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/data_vac"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <TextView
        android:id="@+id/tpo_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_tpo_evento"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16dp" />

    <RadioButton
        android:id="@+id/edt_eventoTpo1"
        android:layout_marginLeft="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_eventoTpo1" />

    <RadioButton
        android:id="@+id/edt_eventoTpo2"
        android:layout_marginLeft="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_eventoTpo2" />

    <EditText
        android:id="@+id/edt_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edt_cidade" />

    <EditText
        android:id="@+id/edt_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edt_estado" />

    <EditText
        android:id="@+id/edt_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edt_end" />

    <EditText
        android:id="@+id/edt_compl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edt_compl" />

    <EditText
        android:id="@+id/edt_pt_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edt_pt_ref" />

    <EditText
        android:id="@+id/edt_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edt_cep" />

    <EditText
        android:id="@+id/edt_fone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|phone"
        android:text="@string/edt_fone1" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/edt_email" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="Cadastrar" />
</LinearLayout>